--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,17 @@
-*.csv
 *.xml
 *.sh
 *.dtd
 *.gz
 *paths.txt
 *.pdf
+*AppImage./neo4j-desktop-1.4.13-x86_64.AppImage./neo4j-desktop-1.4.13-x86_64.AppImage
+./data/dblp_phdthesis.csv
+./data/dblp_author_authored_by.csv
+./data/dblp_inproceedings.csv
+./data/dblp_incollection.csv
+./data/dblp_proceedings.csv
+./data/dblp_book.csv
+./data/dblp_www.csv
+./data/dblp_author.csv
+./data/dblp_journal_published_in.csv
+./data/dblp_article.csv
